--- a/src/core/public/_core.scss
+++ b/src/core/public/_core.scss
@@ -7,3 +7,29 @@
   min-width: 100%;
   min-height: 100%;
 }
+
+// * {
+//   font-family: "Axiforma", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+// }
+
+.chrHeaderWrapper {
+  .euiHeader{
+    height: 50px;
+    background: white;   
+  }
+}
+
+.euiCollapsibleNav{
+  top: 80px !important;
+  background-color: #50a582;
+}
+
+.euiPage{
+  margin-top:80px;
+}
+
+
+.euiListGroupItem--subdued 
+.euiListGroupItem__text:not(:disabled), .euiListGroupItem--subdued .euiListGroupItem__button:not(:disabled){
+ color: white;
+}
