--- a/src/core/public/_core.scss
+++ b/src/core/public/_core.scss
@@ -11,25 +11,49 @@
 // * {
 //   font-family: "Axiforma", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 // }
+$headerHeight: 75px;
+$headerBGColor: #2c3e50;
+$headerTextColor: #fff;
+$sideNavColor: #78c2ad;
 
 .chrHeaderWrapper {
   .euiHeader{
-    height: 50px;
-    background: white;   
+    height: $headerHeight;
+    background-color: $headerBGColor  !important;   
+    .euiHeaderSectionItem__button, .euiHeaderBreadcrumbs .euiLink{
+        color: $headerTextColor;
+    }
+    .euiHeaderLogo, .euiHeaderSectionItem__button{
+      height: $headerHeight;
+    }
+
+    .euiHeaderLogo::after, .euiHeaderSectionItem::after{
+      height: $headerHeight !important;
+      top:0 !important;
+    }
+    .euiHeaderLogo:hover, .euiHeaderSectionItem__button:hover{
+      opacity: 0.7;
+      background-color: $headerBGColor;
+    }
   }
 }
 
 .euiCollapsibleNav{
-  top: 80px !important;
-  background-color: #50a582;
+  top: $headerHeight !important;
+  background-color: $sideNavColor !important;
 }
 
-.euiPage{
-  margin-top:80px;
+.app-wrapper{
+  margin-top:30px !important;
 }
 
 
 .euiListGroupItem--subdued 
 .euiListGroupItem__text:not(:disabled), .euiListGroupItem--subdued .euiListGroupItem__button:not(:disabled){
  color: white;
+}
+
+.euiBody--headerIsFixed .euiFlyout, .euiBody--headerIsFixed .euiCollapsibleNav{
+  top: $headerHeight !important;
+  height: calc(1005 - $headerHeight) !important;
 }
