styles(Demo Changes): Demo Changes

--- a/src/core/public/_core.scss
+++ b/src/core/public/_core.scss
@@ -12,9 +12,9 @@
 //   font-family: "Axiforma", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 // }
 $headerHeight: 75px;
-$headerBGColor: #2c3e50;
-$headerTextColor: #fff;
-$sideNavColor: #78c2ad;
+$headerBGColor: #ff0e00;
+$headerTextColor: rgb(5, 5, 5);
+$sideNavColor: #ff0e00;
 
 .chrHeaderWrapper {
   .euiHeader{
